Change to feign client return object DTOs
Changed to be records rather than classes.